refactor: migrate spring.lang to jakarta.annotation and adopt Jackson asString()
Spring Boot 4.0.x deprecated org.springframework.lang.Nullable/@NonNull
in favor of jakarta.annotation equivalents. Jackson 3.x (tools.jackson)
renamed JsonNode.asText() to asString(). This migrates both patterns
across config, controller, mapper, service, support, util, and test
packages. Also removes @NonNull override annotations no longer required
by the framework, uses unnamed exception variables for ignored catches,
and removes unused imports.

- Replace org.springframework.lang.Nullable with jakarta.annotation.Nullable
- Replace org.springframework.lang.NonNull with jakarta.annotation.Nonnull
- Replace JsonNode.asText() calls with asString() in mappers and tests
- Use JsonNodeType enum instead of isTextual() in GoogleBooksJsonSupport
- Use unnamed _ variables for caught-and-ignored exceptions
- Add @SuppressWarnings for intentional nullable Boolean returns
- Remove redundant @Nullable on return types in GoogleBooksJsonSupport